--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,13 @@ option(LIBIGL_WITH_OPENGL_GLFW       "Use GLFW"           ON)
 
 find_package(LIBIGL REQUIRED)
 find_package(VCG REQUIRED)
+find_package(DIPlib REQUIRED)
+find_package(HDF5 CONFIG REQUIRED)
+find_package(HighFive REQUIRED)
 
 # Add your project files
 file(GLOB SRCFILES *.cpp)
-add_definitions(-DNOMINMAX -D_USE_MATH_DEFINES)
+add_definitions(-DNOMINMAX -D_USE_MATH_DEFINES -DDIP__IS_STATIC -DDIP__ENABLE_ASSERT -DDIP__HAS_JPEG -DDIP__EXCEPTIONS_RECORD_STACK_TRACE)
 add_executable(${PROJECT_NAME} ${SRCFILES} ${VCG_INCLUDE_DIR}/wrap/ply/plylib.cpp)
-target_include_directories(${PROJECT_NAME} PRIVATE ${VCG_INCLUDE_DIR})
-target_link_libraries(${PROJECT_NAME} PRIVATE igl::core)
+target_include_directories(${PROJECT_NAME} PRIVATE ${VCG_INCLUDE_DIR} ${DIPlib_INCLUDE_DIR} ${HighFive_INCLUDE_DIR} ${HDF5_INCLUDE_DIR})
+target_link_libraries(${PROJECT_NAME} PRIVATE igl::core ${DIPlib_LIB_DIR}/DIP.lib ${DIPlib_LIB_DIR}/jpeg.lib)
