--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,18 @@ branches:
 matrix:
   include:
     - os: linux
-      script: make travis
+      script:
+        - mkdir build && cd build
+        - cmake ..
+        - cmake --build .
     - os: osx
       osx_image: xcode8
       env:
         - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
-      script: make travis
+      script:
+        - mkdir build && cd build
+        - cmake ..
+        - cmake --build .
     - os: windows
       script:
         - mkdir build && cd build
