fixed travis and cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,21 @@ find_package(DIPlib REQUIRED)
 #find_package(HighFive REQUIRED)
 
 # Add your project files
-file(GLOB SRCFILES src/*.cpp)
+file(GLOB MAIN_SOURCES
+	"${PROJECT_SOURCE_DIR}/src/**.cpp"
+	"${PROJECT_SOURCE_DIR}/include/*.c"
+	"${PROJECT_SOURCE_DIR}/include/*.cpp"
+	"${PROJECT_SOURCE_DIR}/include/*.tpp"
+	"${PROJECT_SOURCE_DIR}/include/*.h"
+	"${PROJECT_SOURCE_DIR}/include/*.hpp"
+	"${PROJECT_SOURCE_DIR}/include/*/*.c"
+	"${PROJECT_SOURCE_DIR}/include/*/*.cpp"
+	"${PROJECT_SOURCE_DIR}/include/*/*.tpp"
+	"${PROJECT_SOURCE_DIR}/include/*/*.h"
+	"${PROJECT_SOURCE_DIR}/include/*/*.hpp"
+)
+update_deps_file("main_sources" "${MAIN_SOURCES}")
 add_definitions(-DNOMINMAX -D_USE_MATH_DEFINES -DDIP__IS_STATIC -DDIP__ENABLE_ASSERT -DDIP__HAS_JPEG -DDIP__EXCEPTIONS_RECORD_STACK_TRACE)
-add_executable(${PROJECT_NAME} ${SRCFILES} ${VCG_INCLUDE_DIR}/wrap/ply/plylib.cpp)
-target_include_directories(${PROJECT_NAME} PRIVATE "include" ${VCG_INCLUDE_DIR} ${DIPlib_INCLUDE_DIR})
+add_executable(${PROJECT_NAME} ${MAIN_SOURCES} ${VCG_INCLUDE_DIR}/wrap/ply/plylib.cpp)
+target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/include" ${VCG_INCLUDE_DIR} ${DIPlib_INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} PRIVATE igl::core DIP)
