--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,15 @@ matrix:
       script:
         - mkdir build && cd build
         - cmake ..
-        - cmake --build .
+        - make
     - os: osx
       osx_image: xcode8
       env:
-        - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
+        - MATRIX_EVAL="brew install gcc cmake && CC=gcc-7 && CXX=g++-7"
       script:
         - mkdir build && cd build
         - cmake ..
-        - cmake --build .
+        - make
     - os: windows
       script:
         - mkdir build && cd build
