--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ option(LIBIGL_WITH_OPENGL_GLFW       "Use GLFW"           OFF)
 
 find_package(LIBIGL REQUIRED)
 find_package(VCG REQUIRED)
-#find_package(DIPlib REQUIRED)
+find_package(DIPlib REQUIRED)
 find_package(TBB REQUIRED)
 #find_package(HDF5 CONFIG REQUIRED)
 #find_package(HighFive REQUIRED)
@@ -42,9 +42,9 @@ include(update_deps_file)
 update_deps_file("main_sources" "${MAIN_SOURCES}")
 
 add_definitions(-DNOMINMAX -D_USE_MATH_DEFINES -DDIP__IS_STATIC -DDIP__ENABLE_ASSERT -DDIP__HAS_JPEG -DDIP__EXCEPTIONS_RECORD_STACK_TRACE)
-#add_executable(${PROJECT_NAME} ${MAIN_SOURCES} ${PROJECT_SOURCE_DIR}/src/Main.cpp ${VCG_INCLUDE_DIR}/wrap/ply/plylib.cpp)
-#target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/include" ${VCG_INCLUDE_DIR} ${DIPlib_INCLUDE_DIR})
-#target_link_libraries(${PROJECT_NAME} PRIVATE igl::core DIP)
+add_executable(${PROJECT_NAME} ${MAIN_SOURCES} ${PROJECT_SOURCE_DIR}/src/Main.cpp ${VCG_INCLUDE_DIR}/wrap/ply/plylib.cpp)
+target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/include" ${VCG_INCLUDE_DIR} ${DIPlib_INCLUDE_DIR})
+target_link_libraries(${PROJECT_NAME} PRIVATE igl::core DIP)
 
 add_executable(SliceTest ${MAIN_SOURCES} ${PROJECT_SOURCE_DIR}/src/SliceTest.cpp)
 target_include_directories(SliceTest PRIVATE "${PROJECT_SOURCE_DIR}/include" ${VCG_INCLUDE_DIR} ${TBB_INCLUDE_DIR})
