--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,21 +9,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 option(LIBIGL_WITH_OPENGL            "Use OpenGL"         OFF)
 option(LIBIGL_WITH_OPENGL_GLFW       "Use GLFW"           OFF)
 
-find_package(LIBIGL REQUIRED)
+find_package(TBB REQUIRED)
 find_package(VCG REQUIRED)
 find_package(DIPlib REQUIRED)
-find_package(TBB REQUIRED)
-#find_package(HDF5 CONFIG REQUIRED)
-#find_package(HighFive REQUIRED)
-#find_package(OpenMP)
-#if (OpenMP_FOUND)
-#    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-#    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-#    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-#	if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-#		string(REPLACE "-openmp" "-openmp:experimental" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-#	endif()
-#endif()
+find_package(LIBIGL REQUIRED)
 
 # Add your project files
 file(GLOB MAIN_SOURCES
@@ -41,7 +30,13 @@ file(GLOB MAIN_SOURCES
 include(update_deps_file)
 update_deps_file("main_sources" "${MAIN_SOURCES}")
 
-add_definitions(-DNOMINMAX -D_USE_MATH_DEFINES -DDIP__IS_STATIC -DDIP__ENABLE_ASSERT -DDIP__HAS_JPEG -DDIP__EXCEPTIONS_RECORD_STACK_TRACE)
+if(MSVC)
+  # Enable parallel compilation for Visual Studio
+  add_compile_options(/MP /bigobj)
+  add_definitions(-DNOMINMAX -D_USE_MATH_DEFINES)
+endif()
+
+add_definitions(-DDIP__IS_STATIC -DDIP__ENABLE_ASSERT -DDIP__HAS_JPEG -DDIP__EXCEPTIONS_RECORD_STACK_TRACE)
 add_executable(${PROJECT_NAME} ${MAIN_SOURCES} ${PROJECT_SOURCE_DIR}/src/Main.cpp ${VCG_INCLUDE_DIR}/wrap/ply/plylib.cpp)
 target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/include" ${VCG_INCLUDE_DIR} ${DIPlib_INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} PRIVATE igl::core DIP)
