--- a/.travis.yml
+++ b/.travis.yml
@@ -18,20 +18,16 @@ jobs:
     - os: osx
       osx_image: xcode10
       env: COMPILER=g++-7 CPP_VER=11
-      addons:
-        homebrew:
-          packages:
-            - gcc
-            - gcc@7
+      before_install:
+        - brew update
+        - brew install gcc@7
     - os: windows
         
 install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install icu4c; fi
   - if [[ "${COMPILER}" != "" ]]; then export CXX=${COMPILER}; fi
+  - ${CXX} --version
 
 before_script:
-  - ${CXX} --version
   - mkdir -p -v build
   - cd build
   - cmake ..
