--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: cpp
 os: linux
+dist: xenial
 branches:
   only:
   - master
@@ -7,18 +8,32 @@ branches:
 jobs:
   include:
     - os: linux
-      script:
-        - mkdir build && cd build
-        - cmake ..
-        - make
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env: COMPILER=g++-7 CPP_VER=11
     - os: osx
       osx_image: xcode10
-      script:
-        - mkdir build && cd build
-        - cmake ..
-        - make
+      env: COMPILER=g++-7 CPP_VER=11
+      before_install:
+        - brew update
+        - brew install gcc@7
     - os: windows
-      script:
-        - mkdir build && cd build
-        - cmake ..
-        - cmake --build .
+        
+install:
+  - if [[ "${COMPILER}" != "" ]]; then export CXX=${COMPILER}; fi
+  - ${CXX} --version
+
+before_script:
+  - mkdir -p -v build
+  - cd build
+  - cmake ..
+
+script:
+  - cmake --build .
+
+notifications:
+  email: off
