--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 [submodule "external/libigl"]
 	path = external/libigl
 	url = https://github.com/libigl/libigl.git
-	branch = dev
+	branch = master
 [submodule "external/vcglib"]
 	path = external/vcglib
 	url = https://github.com/cnr-isti-vclab/vcglib
@@ -12,3 +12,7 @@
 [submodule "external/tbb"]
 	path = external/tbb
 	url = https://github.com/wjakob/tbb
+[submodule "external/sol2"]
+	path = external/sol2
+	url = https://github.com/ThePhD/sol2.git
+	branch = develop
