--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = external/sol2
 	url = https://github.com/ThePhD/sol2.git
 	branch = develop
+[submodule "external/tbb"]
+	path = external/tbb
+	url = https://github.com/wjakob/tbb.git
