--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	branch = develop
 [submodule "external/tbb"]
 	path = external/tbb
-	url = https://github.com/wjakob/tbb.git
+	url = https://github.com/oneapi-src/oneTBB.git
