--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,8 +42,12 @@ jobs:
         name: ${{ matrix.os }}
         retention-days: 1
         path: |
-          ${{github.workspace}}/build/**/Scaffolder*
-          ${{github.workspace}}/build/**/SliceTest*
+          ${{github.workspace}}/build/**/Scaffolder
+          ${{github.workspace}}/build/**/SliceTest
+          ${{github.workspace}}/build/**/Scaffolder.exe
+          ${{github.workspace}}/build/**/SliceTest.exe
+          ${{github.workspace}}/build/**/*.dll
+          ${{github.workspace}}/build/**/*.pdb
   release:
     runs-on: ubuntu-latest
     needs: [build]
