--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+        - os: ubuntu-latest
+          compiler: g++
+        - os: macos-latest
+          compiler: clang++
+        - os: windows-latest
+          compiler: cl
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -29,8 +35,10 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_STANDARD=11
-
+      env:
+        CXX: ${{ matrix.compiler }}
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_STANDARD=11
+      
     - name: Build
       working-directory: ${{github.workspace}}/build
       shell: bash
