try to build from conda-forge scripts
MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.8.6, and conda-forge-pinning 2021.02.05.20.43.41

remove git submodule due to incompatible c++11 libs

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,10 @@ name: Build
 
 on:
   push:
-    branches: [ master, v2 ]
+    tags:
+      - 'v*'
+  release:
+    types: [published]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
