--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,34 +1,8 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+trigger: conda-forge
 
-trigger:
-- master
-- dev
+pr: none
 
-variables:
-  build_type: Debug
-  build_std: 11
-  CMAKE_BUILD_PARALLEL_LEVEL: 4
-
-strategy:
-  matrix:
-    Linux11:
-      vmImage: 'ubuntu-latest'
-    macOS11:
-      vmImage: 'macOS-latest'
-    Windows11:
-      vmImage: 'windows-latest'
-pool:
-  vmImage: $(vmImage)
-steps:
-- checkout: self
-  submodules: true
-- task: CMake@1
-  inputs:
-    cmakeArgs: .. -DCMAKE_CXX_STANDARD=$(build_std) -DCMAKE_BUILD_TYPE=$(build_type)
-  displayName: 'Configure'
-- script: cmake --build . --config $(build_type)
-  displayName: 'Build'
-  workingDirectory: build
+jobs:
+  - template: ./.azure-pipelines/azure-pipelines-linux.yml
+  - template: ./.azure-pipelines/azure-pipelines-win.yml
+  - template: ./.azure-pipelines/azure-pipelines-osx.yml
