change cmake install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,5 +103,5 @@ if(BUILD_PYSCAFFOLDER)
 	pybind11_add_module("Py${PROJECT_NAME}" ${PYTHON_SOURCES})
 	target_include_directories("Py${PROJECT_NAME}" PRIVATE "${PROJECT_SOURCE_DIR}/include" ${TBB_INCLUDE_DIR} ${VCG_INCLUDE_DIR} ${EIGEN_INCLUDE_DIR} ${SOL2_INCLUDE_DIR} ${LUA_INCLUDE_DIR} ${PyBind11_INCLUDE_DIR})
 	target_link_libraries("Py${PROJECT_NAME}" PRIVATE igl::core tbb Threads::Threads ${LUA_LIBRARIES})
-	install(TARGETS "Py${PROJECT_NAME}" DESTINATION lib)
+	install(TARGETS "Py${PROJECT_NAME}" COMPONENT python)
 endif()
