--- a/.github/workflows/cmake-all.yml
+++ b/.github/workflows/cmake-all.yml
@@ -1,4 +1,9 @@
-name: Build
+name: Build All for Debugging
+
+on:
+  workflow_dispatch:
+  pull_request:
+  push:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
