--- a/.github/workflows/cmake-all.yml
+++ b/.github/workflows/cmake-all.yml
@@ -51,12 +51,14 @@ jobs:
         retention-days: 1
         path: |
           ${{github.workspace}}/build/**/Scaffolder
-          ${{github.workspace}}/build/**/SliceTest
-          ${{github.workspace}}/build/**/Scaffolder.exe
-          ${{github.workspace}}/build/**/SliceTest.exe
+          ${{github.workspace}}/build/**/Scaffolder.SliceTest
+          ${{github.workspace}}/build/**/*.exe
           ${{github.workspace}}/build/**/*.dll
           ${{github.workspace}}/build/**/*.pdb
-          ${{github.workspace}}/build/**/PyScaffolder*
+          ${{github.workspace}}/build/**/*.so
+          ${{github.workspace}}/build/**/*.pyd
+          ${{github.workspace}}/build/**/*.exp
+          ${{github.workspace}}/build/**/*.lib
   release:
     runs-on: ubuntu-latest
     needs: [build]
