--- a/.github/workflows/cmake-all.yml
+++ b/.github/workflows/cmake-all.yml
@@ -8,7 +8,7 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  CMAKE_BUILD_PARALLEL_LEVEL: 4
+  CMAKE_BUILD_PARALLEL_LEVEL: 8
 
 jobs:
   build:
@@ -28,6 +28,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+
+    - name: Install libomp for macos
+      if: matrix.os == 'macos-latest'
+      run: brew install libomp
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/build
@@ -52,13 +56,16 @@ jobs:
         path: |
           ${{github.workspace}}/build/**/Scaffolder
           ${{github.workspace}}/build/**/Scaffolder.SliceTest
-          ${{github.workspace}}/build/**/*.exe
+          ${{github.workspace}}/build/**/Scaffolder.exe
+          ${{github.workspace}}/build/**/Scaffolder.SliceTest.exe
           ${{github.workspace}}/build/**/*.dll
           ${{github.workspace}}/build/**/*.pdb
           ${{github.workspace}}/build/**/*.so
           ${{github.workspace}}/build/**/*.pyd
           ${{github.workspace}}/build/**/*.exp
           ${{github.workspace}}/build/**/*.lib
+          !${{github.workspace}}/build/**/lua*
+          !${{github.workspace}}/build/**/tbb*
   release:
     runs-on: ubuntu-latest
     needs: [build]
