--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches:
-     - master
+    tags:
+      - 'v*'
   release:
     types:
       - published
@@ -53,17 +53,21 @@ jobs:
       with:
         submodules: true
 
+    - name: Install libomp for macos
+      if: matrix.os == 'macos-latest'
+      run: brew install libomp
+
     - uses: actions/setup-python@v2
 
     - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==1.6.3
+      run: python -m pip install cibuildwheel==1.10.0
 
     - name: Build wheel
       run: python -m cibuildwheel --output-dir wheelhouse
       env:
         # Python 2.7 on Windows requires a workaround for C++11 support,
         # built separately below
-        CIBW_SKIP: cp27-win*
+        CIBW_SKIP: "pp* cp27-win* cp35-* *-win32 *-manylinux_i686"
 
     - name: Show files
       run: ls -lh wheelhouse
@@ -92,7 +96,7 @@ jobs:
     - uses: actions/setup-python@v2
 
     - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==1.6.3
+      run: python -m pip install cibuildwheel==1.10.0
 
     - uses: ilammy/msvc-dev-cmd@v1
 
