--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -1,17 +1,14 @@
-name: Binary Release
+name: Binary
 
 on:
+  workflow_dispatch:
+  pull_request:
   push:
-    tags:
-      - 'v*'
-  release:
-    types: [published]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  CMAKE_BUILD_PARALLEL_LEVEL: 4
-  MAKEFLAGS: "-j4"
+  CMAKE_BUILD_PARALLEL_LEVEL: 8
 
 jobs:
   build:
@@ -31,13 +28,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-    
+
     - name: Install libomp for macos
       if: matrix.os == 'macos-latest'
-      run: |
-        brew install libomp
-        brew info libomp
-        brew --prefix libomp
+      run: brew install libomp
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/build
@@ -61,11 +55,17 @@ jobs:
         retention-days: 1
         path: |
           ${{github.workspace}}/build/**/Scaffolder
-          ${{github.workspace}}/build/**/SliceTest
+          ${{github.workspace}}/build/**/Scaffolder.SliceTest
           ${{github.workspace}}/build/**/Scaffolder.exe
-          ${{github.workspace}}/build/**/SliceTest.exe
+          ${{github.workspace}}/build/**/Scaffolder.SliceTest.exe
           ${{github.workspace}}/build/**/*.dll
           ${{github.workspace}}/build/**/*.pdb
+          ${{github.workspace}}/build/**/*.so
+          ${{github.workspace}}/build/**/*.pyd
+          ${{github.workspace}}/build/**/*.exp
+          ${{github.workspace}}/build/**/*.lib
+          !${{github.workspace}}/build/**/lua*
+          !${{github.workspace}}/build/**/tbb*
   release:
     runs-on: ubuntu-latest
     needs: [build]
