Fixed macos conda-build and pypi upload
- update libigl to 2.3.0
- add skipdownload external igl
- update external.tar.gz
- update macosx_sdk to 10.15

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-out
+out*
+build*
 .vs
 CMakeSettings.json
 diplib/lib
 main_sources.cmake
 python_sources.cmake
-external/
+external*/
 scripts/external.tar.gz
 *.pyc
-build_artifacts
