--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake
     - ninja
+    - llvm-openmp # [osx]
     - pkg-config # [unix]
   host:
     - vc # [win]
