--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         submodules: true
 
-    - name: Install libomp for macos
+    - name: Install libomp (macOS)
       if: matrix.os == 'macos-latest'
       run: brew install libomp
 
