Due to numpy error on python 3.10 in macosx x64 The CI build will skip the test at this time

--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -8,7 +8,7 @@ parameters:
 jobs:
 - job: conda_osx64
   pool:
-    vmImage: macOS-10.15
+    vmImage: macOS-latest
   strategy:
     matrix:
       osx_64:
