--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -11,7 +11,7 @@ on:
 env:
   CIBW_TEST_COMMAND: python {project}/src/python/test.py
   CIBW_TEST_REQUIRES: numpy
-
+  CIBW_TEST_SKIP: cp310-macosx_x86_64
 
 jobs:
   build_sdist:
@@ -51,28 +51,21 @@ jobs:
       with:
         submodules: true
 
-    - name: Install libomp for macos
+    - name: Install libomp and openblas for macos
       if: matrix.os == 'macos-latest'
-      run: brew install libomp
-
-    - uses: actions/setup-python@v2
-
-    - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==1.10.0
+      run: |
+        brew install libomp
+        brew install openblas
 
     - name: Build wheel
-      run: python -m cibuildwheel --output-dir wheelhouse
+      uses: pypa/cibuildwheel@v2.1.1
       env:
         # Python 2.7 on Windows requires a workaround for C++11 support,
         # built separately below
-        CIBW_SKIP: pp* cp27-win* cp35-* *-win32 *-manylinux_i686
+        CIBW_SKIP: pp* cp27* *-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x
 
     - name: Show files
       run: ls -lh wheelhouse
-      shell: bash
-
-    - name: Verify clean directory
-      run: git diff --exit-code
       shell: bash
 
     - name: Upload wheels
@@ -80,58 +73,9 @@ jobs:
       with:
         path: wheelhouse/*.whl
 
-
-  # Windows 2.7 (requires workaround for MSVC 2008 replacement)
-  build_win27_wheels:
-    name: Py 2.7 wheels on Windows
-    runs-on: windows-latest
-
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
-
-    - uses: actions/setup-python@v2
-
-    - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==1.10.0
-
-    - uses: ilammy/msvc-dev-cmd@v1
-
-    - name: Build 64-bit wheel
-      run: python -m cibuildwheel --output-dir wheelhouse
-      env:
-        CIBW_BUILD: cp27-win_amd64
-        DISTUTILS_USE_SDK: 1
-        MSSdk: 1
-
-    - uses: ilammy/msvc-dev-cmd@v1
-      with:
-        arch: x86
-
-    - name: Build 32-bit wheel
-      run: python -m cibuildwheel --output-dir wheelhouse
-      env:
-        CIBW_BUILD: cp27-win32
-        DISTUTILS_USE_SDK: 1
-        MSSdk: 1
-
-    - name: Show files
-      run: ls -lh wheelhouse
-      shell: bash
-
-    - name: Verify clean directory
-      run: git diff --exit-code
-      shell: bash
-
-    - uses: actions/upload-artifact@v2
-      with:
-        path: wheelhouse/*.whl
-
-
   upload_all:
     name: Upload if release
-    needs: [build_wheels, build_win27_wheels, build_sdist]
+    needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     if: github.event.inputs.upload != false
 
@@ -143,7 +87,7 @@ jobs:
         name: artifact
         path: dist
 
-    - uses: pypa/gh-action-pypi-publish@v1.4.1
+    - uses: pypa/gh-action-pypi-publish@v1.4.2
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
