--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 trigger: 
   branches:
-    exclude: [ 'master' ]
+    include: [ 'master' ]
 
 jobs:
   - template: ./.azure-pipelines/azure-pipelines-linux.yml
